@@ -1,3 +1,8 @@
+2007-03-07  Eitan Isaacson  <eitan@ascender.com>
+
+	* plugins/event_monitor.py: Added links in event logs to show
+	accessible in tree (bug 417526).
+	
 2007-03-12  Peter Parente  <parente@cs.unc.edu>
 
 	* src/lib/accerciser/accessible_treeview.py: Fixed bug #414915, also
